test/classes/ferguson/issue-19474-duplicate-fields3.good
issue-19474-duplicate-fields3.chpl:10: error: field 'x' has same name as parent class field
issue-19474-duplicate-fields3.chpl:2: note: parent class field declared here
